# media_types

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  regenerate.sh
examples/: generate_mime_types.rs
src/: all_types.rs  application.rs  audio.rs  chemical.rs  font.rs  image.rs  lib.rs  message.rs  model.rs  multipart.rs  text.rs  video.rs  x_conference.rs  x_shader.rs
tests/: comprehensive_coverage.rs
tools/: README.md
